# xml2bip

./: CMakeLists copy.txt  CMakeLists.txt  README.md  action.txt  condition.txt  mytree.bip  mytree.xml
scripts/: add_property.py  clean_up.bash  demo1.bip  demo2.bip  demo3.bip  gene_models.bash  nuXmv_ic3.bash  nuXmv_ic3.cmd  readme.txt
src/: xmltest.cpp
test/: mytree.bip  mytree.xml  mytree2.bip  mytree2.xml
